# Lighthouse_Swarm_Controller

./: .gitignore  .gitmodules  CRAZYFLIE_SETUP.md  INSTALLATION.md  LANDING_PAD_SETUP.md  LIGHTHOUSE_SETUP.md  Landing_pad.stl  PARTS.md  README.md  USAGE.md  check_pose.py  check_pose_all.py  configuration.yaml  flash_all40.sh  script.test  scriptII.test  upload_lh_config.py  upload_lh_config_all.py  write_lighthouse.py
cache/: 3A51D02E.json  67270310.json  A8836A0A.json  C931D955.json
collision_avoidance/: CAhere.txt
collision_avoidance/LinuxBuild/LinuxCA_Data/: CAConfig.json  RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets
collision_avoidance/LinuxBuild/LinuxCA_Data/Logs/: log-2023-07-06_23-51-03.txt  log-2023-07-06_23-52-37.txt  log-2023-08-09_12-51-13.txt  log-2023-08-09_13-17-58.txt  log-2023-08-09_13-25-41.txt  log-2023-08-09_13-27-56.txt  log-2023-08-09_13-31-49.txt  log-2023-08-09_13-41-46.txt  log-2023-08-09_14-02-11.txt  log-2023-08-09_14-07-11.txt  log-2023-08-09_14-14-06.txt  log-2023-08-09_14-21-17.txt  log-2023-08-09_14-41-17.txt  log-2023-08-09_14-43-06.txt  log-2023-08-09_14-51-04.txt  log-2023-08-09_14-53-41.txt
collision_avoidance/LinuxBuild/LinuxCA_Data/Resources/: unity_builtin_extra
collision_avoidance/WindowsBuild/Emergent Swarm Simulation_Data/: CAConfig.json  RuntimeInitializeOnLoads.json  ScriptingAssemblies.json  app.info  boot.config  resources.assets  resources.assets.resS
collision_avoidance/WindowsBuild/Emergent Swarm Simulation_Data/Logs/: log-2023-07-03_19-11-51.txt  log-2023-07-03_19-12-49.txt  log-2023-07-04_13-39-42.txt  log-2023-07-04_13-41-00.txt  log-2023-07-04_14-22-23.txt  log-2023-07-04_15-48-31.txt  log-2023-07-04_15-57-14.txt  log-2023-07-04_16-23-01.txt  log-2023-07-04_16-40-31.txt  log-2023-07-04_16-44-23.txt  log-2023-07-04_16-48-22.txt  log-2023-07-04_16-57-18.txt
collision_avoidance/WindowsBuild/WindowsCA_Data/: CAConfig.json  globalgamemanagers  globalgamemanagers.assets  level0
collision_avoidance/WindowsBuild/WindowsCA_Data/Logs/: log-2023-07-04_13-41-27.txt  log-2023-07-04_14-21-28.txt  log-2023-07-04_15-33-04.txt  log-2023-07-04_15-46-03.txt  log-2023-07-04_16-32-41.txt  log-2023-07-04_16-33-47.txt  log-2023-07-04_16-56-13.txt  log-2023-07-04_17-00-53.txt  log-2023-07-04_17-04-24.txt  log-2023-07-04_17-37-31.txt  log-2023-07-06_09-11-46.txt  log-2023-07-07_00-05-28.txt  log-2023-07-07_00-06-54.txt  (+3 more)
ros2_ws/: launch.sh
ros2_ws/.devcontainer/: Dockerfile  devcontainer.json
ros2_ws/Log/: OrbbecSDK.log.txt
ros2_ws/src/247Swarm/: package.xml  setup.cfg  setup.py
ros2_ws/src/247Swarm/247Swarm/: CrazyflieNode.py  GUI.py  GUI_test_pub.py  MainController.py  PadManager.py  RadioHandler.py  logger.py  pos_command.py
ros2_ws/src/247Swarm/247Swarm/collision_avoidance/: ca_node.py  unity_communication.py
ros2_ws/src/247Swarm/launch/: cfs_launch.py
ros2_ws/src/gui/: CMakeLists.txt  package.xml
ros2_ws/src/gui/gui/: GUI.py  GUI_test_pub.py  GUI_theme.py  helper_classes.py  simple_GUI.py
ros2_ws/src/gui/launch/: GUI.launch  patternGUI.launch
ros2_ws/src/pattern_vis/: CMakeLists.txt  package.xml
ros2_ws/src/pattern_vis/launch/: visualiser.launch
ros2_ws/src/pattern_vis/pattern_vis/: visualisation.py
ros2_ws/src/patternvis/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_interface/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_operation/: launch.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/topic_interface/: CMakeLists.txt  package.xml
ros2_ws/src/waypoint_publisher/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/waypoint_publisher/include/: waypoint_publisher.hpp
ros2_ws/src/waypoint_publisher/src/: pattern_functions.cpp  waypoint_publisher.cpp  waypoints_publisher.cpp
ros2_ws/src/waypoint_publisher/waypoint_publisher/: array_genrator.py  waypointpub_node.py
windows-demo/: calibrate.sh  check_lh.sh  configuration.yaml  full.sh  launch_swl.sh  parse_lh.sh
windows-demo-all/: calibrate.sh  check_docker.sh  check_lh.sh  check_radios.sh  full.sh  launch_swl.sh  swl-demo.bat  write_to_config.sh
(+36 files in other folders)
