<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>247Swarm</name>
  <version>0.0.0</version>
  <description>Swarming operations package for the Crazyflie 2, for 24/7 demonstrations or swarm research.</description>
  <maintainer email="operations.swarminglab@tudelft.nl">Swarming Lab TUDelft</maintainer>
  <license>GNU General Public License</license>

  <exec_depend>swarm_interface</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
